...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:id="@+id/activity_registration"
    tools:context=".Registration">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="300dp"
                android:layout_height="135dp"
...
