...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/activity_home"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

...
